fix text alignment for errors

--- a/style.css
+++ b/style.css
@@ -646,7 +646,7 @@ footer {
 	background-color: orangered;
 }
 
-.post-content.error-text {
+.post-errortext {
 	margin-left: 15px;
 }
 
